--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
-    <link rel="stylesheet" href="screen.css">
+    <title>Feedback Form</title>
+   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.css">
+
   </head>
   <body>
-    <h1>Heading</h1>
+    <h1>Dining Experience</h1>
     <script src="index.js"></script>
   </body>
 </html>
+<header>Nueva Esparta's Finest</header>
+<form id="form" class="topBefore">
+  <input id="name" type="text" placeholder="NAME">
+  <input id="email" type="text" placeholder="E-MAIL">
+  <textarea id="message" type="text" placeholder="REVIEW"></textarea>
+<input id="submit" type="submit" value="SUMBIT!">
+
+</form>
