--- a/index.html
+++ b/index.html
@@ -6,21 +6,71 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Feedback Form</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.css" >
     <link rel="stylesheet" href="screen.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css">
 
 
   </head>
-  <body>
+  <body> 
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
+    <div>Submit feedback for a chance to win a $100 gift card!</div>
   </body>
 </html>
-<header>Nueva Esparta's Finest</header>
+<nav><header>Nueva Esparta's Finest</header></nav>
 
 <form id="form" class="topBefore">
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
   <textarea id="message" type="text" placeholder="REVIEW"></textarea>
+  <h3>In a typical month, how often do you visit our restaurant?</h3>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" >
+    <label class="form-check-label" for="inlineRadio5">This is my first visit</label>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" >
+      <label class="form-check-label" for="inlineRadio5">Once or Twice</label>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" >
+        <label class="form-check-label" for="inlineRadio5">More than four times</label>
+  <h3>How would you rate the quality of our food?</h3>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+    <label class="form-check-label" for="inlineRadio1">(Very Poor) </label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+    <label class="form-check-label" for="inlineRadio2">(Poor)</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+    <label class="form-check-label" for="inlineRadio3">(Fair)</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" >
+    <label class="form-check-label" for="inlineRadio3"> Excellent</label>
+  </div>
+  <h3>How likely are you to recommend to friends or family?</h3>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+    <label class="form-check-label" for="inlineRadio1">Very Unlikely</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+    <label class="form-check-label" for="inlineRadio2">Unlikely</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+    <label class="form-check-label" for="inlineRadio3">Neutral</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" >
+    <label class="form-check-label" for="inlineRadio3">Likely</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+    <label class="form-check-label" for="inlineRadio5">Very Likely</label>
+
+  </div>
 <input id="submit" type="submit" value="SUMBIT!">
 </form>
