--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div>Submit feedback for a chance to win a $100 gift card!</div>
   </body>
 </html>
-<nav><header>Nueva Esparta's Finest</nav></header>
+<header><nav>Nueva Esparta's Finest</nav></header>
 
 <form id="form" class="topBefore">
   <input id="name" type="text" placeholder="NAME">
