--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+ 
+ <body>
+  <nav>Nueva Esparta's Finest </nav> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Feedback Form</title>
+    <title>Feedback Form</title> 
 
     <link rel="stylesheet" href="screen.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css">
 
 
   </head>
-  <body> 
+  
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
     <div>Submit feedback for a chance to win a $100 gift card!</div>
   </body>
 </html>
-<header><nav>Nueva Esparta's Finest</nav></header>
 
 <form id="form" class="topBefore">
   <input id="name" type="text" placeholder="NAME">
