--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div>Submit feedback for a chance to win a $100 gift card!</div>
   </body>
 </html>
-<nav>Nueva Esparta's Finest</nav>
+<div> 
+<nav>Nueva Esparta's Finest</nav> </di>
 
 <form id="form" class="topBefore">
   <input id="name" type="text" placeholder="NAME">
