--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
     <div>Submit feedback for a chance to win a $100 gift card!</div>
+    <div> 
+      <nav>Nueva Esparta's Finest</nav> </di>
   </body>
 </html>
-<div> 
-<nav>Nueva Esparta's Finest</nav> </di>
+
 
 <form id="form" class="topBefore">
   <input id="name" type="text" placeholder="NAME">
@@ -37,15 +38,15 @@
   <h3>How would you rate the quality of our food?</h3>
   <div class="form-check form-check-inline">
     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-    <label class="form-check-label" for="inlineRadio1">(Very Poor) </label>
+    <label class="form-check-label" for="inlineRadio1">Very Poor </label>
   </div>
   <div class="form-check form-check-inline">
     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-    <label class="form-check-label" for="inlineRadio2">(Poor)</label>
+    <label class="form-check-label" for="inlineRadio2">Poor</label>
   </div>
   <div class="form-check form-check-inline">
     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
-    <label class="form-check-label" for="inlineRadio3">(Fair)</label>
+    <label class="form-check-label" for="inlineRadio3">Fair</label>
   </div>
   <div class="form-check form-check-inline">
     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" >
