--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
   </head>
   <body> 
+    <nav>Nueva Esparta's Finest</nav> 
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
     <div>Submit feedback for a chance to win a $100 gift card!</div>
-    <div> 
-      <nav>Nueva Esparta's Finest</nav> </di>
+   
+      
   </body>
 </html>
 
