--- a/index.html
+++ b/index.html
@@ -5,23 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Feedback Form</title>
-
     <link rel="stylesheet" href="screen.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css">
-
-
   </head>
   <body> 
     <nav>Nueva Esparta's Finest</nav> 
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
-    <div>Submit feedback for a chance to win a $100 gift card!</div>
-   
-      
+    <p>Submit feedback for a chance to win a $100 gift card!</p>
   </body>
 </html>
-
-
 <form id="form" class="topBefore">
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
