--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="index.js"></script>
     <p>Submit feedback for a chance to win a $100 gift card!</p>
 </html>
-<form id="form" class="topBefore">
+<form id="form" >
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
   <textarea id="message" type="text" placeholder="REVIEW"></textarea>
