--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
     
+    <p>Submit feedback for a chance to win a $100 gift card!</p>
     </html>
-<form id="form" >
+<form >
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
   <textarea id="message" type="text" placeholder="REVIEW"></textarea>
