--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="screen.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css">
   </head>
+  </html>
   <body> 
     <nav>Nueva Esparta's Finest</nav> 
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
+ 
     <p>Submit feedback for a chance to win a $100 gift card!</p>
-
-    </html>   
-
+<form>
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
   <textarea id="message" type="text" placeholder="REVIEW"></textarea>
