--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <body> 
     <nav>Nueva Esparta's Finest</nav> 
     <h1>Dining Experience</h1>
- 
+    <script src="index.js"></script>
+    </html>
     <p>Submit feedback for a chance to win a $100 gift card!</p>
 <form>
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
   <textarea id="message" type="text" placeholder="REVIEW"></textarea>
-  <form>
   <h3>In a typical month, how often do you visit our restaurant?</h3>
   <div class="form-check form-check-inline">
     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" >
@@ -69,4 +69,3 @@
 <input id="submit" type="submit" value="SUMBIT!">
 </form>
 </body>
-</html>
