--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
     </html>
-    <p>Submit feedback for a chance to win a $100 gift card!</p>
+    <h4>feedback for a chance to win a $100 gift card!</h4>
 <form>
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
