--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>Dining Experience</h1>
     <script src="index.js"></script>
     </html>
-    <h4>feedback for a chance to win a $100 gift card!</h4>
 <form>
+  <h4>Send feedback for a chance to win a $100 gift card!</h4>
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
   <textarea id="message" type="text" placeholder="REVIEW"></textarea>
