--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css">
   </head>
   <body> 
-    <nav>Nueva Esparta's Finest</nav> 
-    <h1>Dining Experience</h1>
-<form>
+    <header> 
+      <h1>Dining Experience</h1>
+    <nav>Nueva Esparta's Finest </nav> 
+  </header>
+    <form>
   <h4>Send feedback for a chance to win a $100 gift card!</h4>
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
@@ -66,6 +68,5 @@
   </div>
 <input id="submit" type="submit" value="SUMBIT!">
 </form>
-<script src="index.js"></script>
 </body>
 </html>
