--- a/index.html
+++ b/index.html
@@ -17,54 +17,54 @@
   <h4>Send feedback for a chance to win a $100 gift card!</h4>
   <input id="name" type="text" placeholder="NAME">
   <input id="email" type="text" placeholder="E-MAIL">
-  <textarea id="message" type="text" placeholder="REVIEW"></textarea>
+  <textarea id="message"  placeholder="REVIEW"></textarea>
   <h3>In a typical month, how often do you visit our restaurant?</h3>
   <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" >
-    <label class="form-check-label" for="inlineRadio5">This is my first visit</label>
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" >
+    <label class="form-check-label" for="inlineRadio1">This is my first visit</label>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" >
-      <label class="form-check-label" for="inlineRadio5">Once or Twice</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" >
+      <label class="form-check-label" for="inlineRadio2">Once or Twice</label>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" >
-        <label class="form-check-label" for="inlineRadio5">More than four times</label>
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+        <label class="form-check-label" for="inlineRadio3">More than four times</label>
   <h3>How would you rate the quality of our food?</h3>
   <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-    <label class="form-check-label" for="inlineRadio1">Very Poor </label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-    <label class="form-check-label" for="inlineRadio2">Poor</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
-    <label class="form-check-label" for="inlineRadio3">Fair</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" >
-    <label class="form-check-label" for="inlineRadio3"> Excellent</label>
-  </div>
-  <h3>How likely are you to recommend to friends or family?</h3>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-    <label class="form-check-label" for="inlineRadio1">Very Unlikely</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-    <label class="form-check-label" for="inlineRadio2">Unlikely</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
-    <label class="form-check-label" for="inlineRadio3">Neutral</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" >
-    <label class="form-check-label" for="inlineRadio3">Likely</label>
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+    <label class="form-check-label" for="inlineRadio4">Very Poor </label>
   </div>
   <div class="form-check form-check-inline">
     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
-    <label class="form-check-label" for="inlineRadio5">Very Likely</label>
+    <label class="form-check-label" for="inlineRadio5">Poor</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6" >
+    <label class="form-check-label" for="inlineRadio6">Fair</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6" >
+    <label class="form-check-label" for="inlineRadio6"> Excellent</label>
+  </div>
+  <h3>How likely are you to recommend to friends or family?</h3>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio7" value="option7">
+    <label class="form-check-label" for="inlineRadio7">Very Unlikely</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio8" value="option8">
+    <label class="form-check-label" for="inlineRadio8">Unlikely</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio9" value="option9" >
+    <label class="form-check-label" for="inlineRadio9">Neutral</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio10" value="option10" >
+    <label class="form-check-label" for="inlineRadio10">Likely</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio11" value="option11">
+    <label class="form-check-label" for="inlineRadio11">Very Likely</label>
   </div>
 <input id="submit" type="submit" value="SUMBIT!">
 </form>
