--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <input id="email" type="text" placeholder="E-MAIL">
   <textarea id="message"  placeholder="REVIEW"></textarea>
   <h3>In a typical month, how often do you visit our restaurant?</h3>
-  <div class="form-check form-check-inline">
+  <div class="form-check form-check-inline"> 
     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" >
-    <label class="form-check-label" for="inlineRadio1">This is my first visit</label>
+    <label class="form-check-label" for="inlineRadio1">This is my first visit</label> </div>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" >
-      <label class="form-check-label" for="inlineRadio2">Once or Twice</label>
+      <label class="form-check-label" for="inlineRadio2">Once or Twice</label> </div>
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
-        <label class="form-check-label" for="inlineRadio3">More than four times</label>
+        <label class="form-check-label" for="inlineRadio3">More than four times</label> </div>
   <h3>How would you rate the quality of our food?</h3>
   <div class="form-check form-check-inline">
     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
@@ -42,8 +42,8 @@
     <label class="form-check-label" for="inlineRadio6">Fair</label>
   </div>
   <div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6" >
-    <label class="form-check-label" for="inlineRadio6"> Excellent</label>
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio12" value="option12" >
+    <label class="form-check-label" for="inlineRadio12"> Excellent</label>
   </div>
   <h3>How likely are you to recommend to friends or family?</h3>
   <div class="form-check form-check-inline">
